--- a/www/index.html
+++ b/www/index.html
@@ -17,9 +17,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/x2js/1.2.0/xml2json.min.js"></script>
     <script src="cordova.js"></script>
 
+    <script src="js/controllers/controllers.js"></script>
+    <script src="js/controllers/CurrencyCtrl.js"></script>
+    <script src="js/controllers/ListCtrl.js"></script>
+    
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
+
+    <script src="js/services/services.js"></script>
+    <script src="js/services/CurrencyFactory.js"></script>
+    <script src="js/services/DateFactory.js"></script>
+    <script src="js/services/HttpService.js"></script>
   </head>
   <body ng-app="starter">
 
