add rate graphic

--- a/www/index.html
+++ b/www/index.html
@@ -13,14 +13,16 @@
     -->
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="cordova.js"></script>
+
     <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/x2js/1.2.0/xml2json.min.js"></script>
-    <script src="cordova.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.js"></script>
 
     <script src="js/controllers/controllers.js"></script>
     <script src="js/controllers/CurrencyCtrl.js"></script>
     <script src="js/controllers/ListCtrl.js"></script>
-    
+
     <script src="js/app.js"></script>
 
     <script src="js/services/services.js"></script>
