--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/services/CurrencyFactory.js"></script>
     <script src="js/services/DateFactory.js"></script>
     <script src="js/services/HttpService.js"></script>
+    <script src="js/services/ChartFactory.js"></script>
   </head>
   <body ng-app="starter">
 
